Completed project ecom api using gui and postmen

--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -5,13 +5,14 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <div class="container-fluid">
       <a class="h2 navbar-brand p-2 bg-warning text-white m-2 fw-bold"
-        >BUGS
-        <img
-          class=""
-          src="https://cdn-icons-png.flaticon.com/32/785/785104.png"
-        />
-        TRACK</a
+        >ECOM API
+        
+      </a
       >
+      <img
+          class=""
+          src="https://cdn-icons-png.flaticon.com/64/891/891462.png"
+        />
 
       <button
         class="navbar-toggler"
@@ -76,7 +77,7 @@
   <!-- Navbar-End -->
   <!-- Add Quote -->
   <blockquote class="blockquote text-center" style="margin: 30px">
-    <p>Developed Issue/Bug tracker app by using tech stack Node.js ,</p>
+    <p>Developed Ecomerce API app by using tech stack Node.js ,</p>
     <p class="mb-4">Express.js ,EJS & MoongoDB</p>
     <footer class="blockquote-footer">
       Irshad <cite title="Source Title">Ali</cite>
